# research-radar

./: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  README.md  RESEARCH_RADAR_AI_BUILD_SPEC.md  VERIFICATION_REPORT.md  app.py  docker-compose.yml  pyproject.toml  research_radar_MVP_Demo开工规格_v0.6.md  research_radar_产品开工审查_v0.7.md  science_research_agent产品调研.md
.streamlit/: config.toml
app/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  api.ts  index.css
radar/: __init__.py  api.py  api_schemas.py  config.py  db.py  models.py  orchestrator.py  schemas.py
radar/adapters/: __init__.py  arxiv.py  base.py  crossref.py  fallback.py  fixture.py  openalex.py  unpaywall.py
radar/embeddings/: __init__.py  base.py  factory.py  ollama.py  openai_compat.py
radar/llm/: __init__.py  base.py  factory.py  mock.py  ollama.py  provider.py  (+1 more)
research-radar-web/: BUILD_SPEC.md  index.html  tailwind.config.js
scripts/: demo_full_flow.py  extract_seed.py  verify_live_stack.py
tests/: conftest.py  test_actions.py  test_adapters.py  test_api.py  test_claim_extraction_llm.py  test_claims.py  test_conditions.py  test_demo_flow.py  test_docling.py  test_embeddings.py  test_failures.py  test_llm_factory.py  test_llm_rerank.py  test_local_settings.py  test_manuscript_understanding.py  test_manuscript_versions.py  test_migrations.py  test_ollama_llm.py  test_openalex.py  test_parsers.py  test_patches.py  test_phase_d.py  test_retrieval.py  test_reviews.py  test_scan_enhancements.py  test_scan_runner.py  test_search_queries.py  test_single_workspace.py  test_smoke.py  test_text_utils.py  test_trust.py  test_ui.py  test_ui_components.py  test_weekly_radar.py
(+112 files in other folders)
