[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "research-radar"
version = "0.1.0"
description = "Local-first Research Radar MVP"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115,<1",
    "feedparser>=6,<7",
    "httpx>=0.27,<1",
    "numpy>=2,<3",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "pylatexenc>=2.10,<3",
    "pymupdf>=1.24",
    "pymupdf4llm>=0.3",
    "pypdf>=5,<7",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0,<3",
    "streamlit>=1.59,<2",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
]
# Optional PDF backend for table/formula-heavy manuscripts; pulls in torch,
# so it stays out of the default install: pip install '.[docling]'
docling = [
    "docling>=2.0",
]

[tool.setuptools.packages.find]
include = ["radar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
